# ClaimHarness

./: .gitignore  AGENTS.md  DEMO_SCRIPT_3MIN.md  MODEL_PROVIDER_GUIDE.md  NON_AI_USER_GUIDE.md  PORTFOLIO_BRIEF.md  README.md  README.zh-CN.md  RELEASE_PACKAGE_GUIDE.md  ROADMAP.md  RUN_PROBLEMBRIDGE_WINDOWS.bat  USABILITY_TEST_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py  problem_bridge_wizard.py
claim_harness/: __init__.py  audit_logger.py  claim_extractor.py  cli.py  context_manager.py  evidence_retriever.py  llm.py  loader.py  report_generator.py  report_viewer.py  schemas.py  verifier.py
claim_harness/prompts/: audit_summary.md
docs/: architecture.md  demo_walkthrough.md  limitations.md  problembridge_vs_storm.md
feedback/: external_review_log_template.csv
problem_bridge/: __init__.py  cli.py  document_intake.py  generator.py  guided.py  interview.py  mock_profiles.py  question_discovery.py  schemas.py  ui_memory.py  writer.py
prompts/: audit_summary.md
scripts/: build_release_zip_powershell.ps1  run_problembridge_ui_powershell.ps1  run_problembridge_ui_windows.bat  test_release_zip_powershell.ps1
tests/: test_cli.py  test_demo_inputs.py  test_demo_snapshot.py  test_docs.py  test_document_intake.py  test_llm_provider.py  test_loader.py  test_mock_pipeline.py  test_problem_bridge_cli.py  test_problem_bridge_guided.py  test_problem_bridge_interview.py  test_problem_bridge_outputs.py  test_problem_bridge_question_discovery.py  test_release_readiness.py  test_report_viewer.py  test_schemas.py  test_ui_memory.py
(+65 files in other folders)
